--- a/hackathon1/src/main/resources/application.properties
+++ b/hackathon1/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=hackathon1
+spring.datasource.url=jdbc:postgresql://localhost:5432/sparky_ai_system
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
